--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
                     <ul class="cusmersCard">
                         <li>
                             <img src="img/ch01.svg" alt="活動主" class="cusmersCardImg">
-                            <h5 class="cusmersCardTitle">活動主</h5>
-                            <p class="cusmersCardContent">用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
+                            <h5 class="cusmersCardTitle fz16">活動主</h5>
+                            <p class="cusmersCardContent fz16">用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
                         </li>
                         <li>
                             <img src="img/ch02.svg" alt="creators" class="cusmersCardImg">
-                            <h5 class="cusmersCardTitle">創作者</h5>
-                            <p class="cusmersCardContent">自由設計互動腳本 輕鬆整合各項數據</p>
+                            <h5 class="cusmersCardTitle fz16">創作者</h5>
+                            <p class="cusmersCardContent fz16">自由設計互動腳本 輕鬆整合各項數據</p>
                         </li>
                         <li>
                             <img src="img/ch03.svg" alt="brade" class="cusmersCardImg">
-                            <h5 class="cusmersCardTitle">企業品牌</h5>
-                            <p class="cusmersCardContent">多元資料整合，做出服務差異化 幫助企業加速決策</p>
+                            <h5 class="cusmersCardTitle fz16">企業品牌</h5>
+                            <p class="cusmersCardContent fz16">多元資料整合，做出服務差異化 幫助企業加速決策</p>
                         </li>
                         <li>
                             <img src="img/ch04.svg" alt="other" class="cusmersCardImg">
-                            <h5 class="cusmersCardTitle">其他</h5>
-                            <p class="cusmersCardContent">創造更多可能...</p>
+                            <h5 class="cusmersCardTitle fz16">其他</h5>
+                            <p class="cusmersCardContent fz16">創造更多可能...</p>
                         </li>
                     </ul>
 
