function section finished

--- a/index.html
+++ b/index.html
@@ -80,6 +80,46 @@
                     </ul>
 
             </div>
+
+            <div class="function">
+                <div class="functionCards">
+                    <ul class="functionCard">
+                        <li>
+                            <div class="functionCardImgBg">
+                                <img src="img/icon01.svg" alt="icon01" class="functionCardImg">
+                            </div>
+                            <h5 class="functionCardTitle fz18 fw-bold lh26">無敵轉換術</h5>
+                            <p class="functionCardContent fz16 lh24">精準掌握客群來源<br>分析用戶轉化流程</p>
+                        </li>
+                        <li>
+                            <div class="functionCardImgBg">
+                                <img src="img/icon02.svg" alt="icon02" class="functionCardImg">
+                            </div>
+                            <h5 class="functionCardTitle fz18 fw-bold lh26">聊天機器人</h5>
+                            <p class="functionCardContent fz16 lh24">66款聊天機器人模組<br>自由設計聊天流程</p>
+                        </li>
+                        <li>
+                            <div class="functionCardImgBg">
+                                <img src="img/icon03.svg" alt="icon03" class="functionCardImg">
+                            </div>
+                            <h5 class="functionCardTitle fz18 fw-bold lh26">一站式訊息中心</h5>
+                            <p class="functionCardContent fz16 lh24">整合Messenger、LINE和IG三大平台訊息</p>
+                        </li>
+                        <li>
+                            <div class="functionCardImgBg">
+                                <img src="img/icon04.svg" alt="icon04" class="functionCardImg">
+                            </div>
+                            <h5 class="functionCardTitle fz18 fw-bold lh26">群發訊息</h5>
+                            <p class="functionCardContent fz16 lh24">自由選定特定受眾<br>精準推送群發訊息</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="functionContent">
+                    <h2 class="functionContentTitle fz32 fw-bold">快速了解客戶輪廓<br>建立品牌流量池</h2>
+                    <p class="functionContentContent fz18 lh46">深入用戶日常，成為用戶貼身好友<br>精準傳遞品牌資訊，打造個人化專屬服務<br>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
+                    <a href="price.html" class="functionContentBtn btnG">方案費用</a>
+                </div>
+            </div>
            
         </main>
 
