--- a/index.html
+++ b/index.html
@@ -121,6 +121,54 @@
                 </div>
             </div>
            
+            <div class="proof">
+                <h2 class="fz32 lh46 fw-bold">好評如潮</h2>
+                <ul class="proofCard">
+                    <li>
+                        <img src="img/user01.jpg" alt="user01" class="proofCardImg">
+                        <p class="proofCardContent fz16 lh24">原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，讓我們公司的產品用更活潑的方式讓使用者認識。</p>
+                        <hr>
+                        <p class="proofCardCompany fz16 lh24 fw-bold">清心寡慾設計公司</p>
+                        <p class="proofCardName fz16 lh24">Lina 執行長</p>
+                        <div class="proofCardStar">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/user02.jpg" alt="user02" class="proofCardImg">
+                        <p class=" proofCardContent fz16 lh24">團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</p>
+                        <hr>
+                        <p class="proofCardCompany fz16 lh24 fw-bold">subwhat 行銷公司</p>
+                        <p class="proofCardName fz16 lh24">Zoe 活動長</p>
+                        <div class="proofCardStar">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/user03.jpg" alt="user03" class="proofCardImg">
+                        <p class=" proofCardContent fz16 lh24">經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</p>
+                        <hr>
+                        <p class="proofCardCompany fz16 lh24 fw-bold">油土伯</p>
+                        <p class="proofCardName fz16 lh24">HowBig</p>
+                        <div class="proofCardStar">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                            <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
         </main>
 
     </div>
