--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="toTopBtn fixedBtn" onclick="ToTop">TOP</div>
     <div class="container">
         <header>
-            <h1><a href="index.html"><img src="img/logo.png" alt="logo" width="218px"></a></h1>
+            <h1><a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a></h1>
             <div class="headerBtn">
             <a href="price.html" class="btnR fz16">方案費用</a>
             </div>
@@ -25,31 +25,32 @@
         <main>
             <div class="banner">
                 <div class="bannerContent">
-                    <span class="fcG fz18">ChatTalker 最全面的聊天機器人</span>
-                    <h2 class="fz48 lh70">你愛我像誰？<br>
+                    <p class="bannerContentUpTitle fcG fz18 lh26">ChatTalker 最全面的聊天機器人</p>
+                    <h2 class="bannerContentMainTitle fz48 lh70">你愛我像誰？<br>
                         扮演什麼角色我都會</h2>
-                    <span class="fz20">Facebook、Instagram、LINE 聊天機器人解決方案</span>
+                    <p class="bannerContentContent fz20 lh29">Facebook、Instagram、LINE 聊天機器人解決方案</p>
                 </div>
                 <img src="img/home.svg" alt="banner" class="bannerImg">
+                <img src="img/bg_home_sm.svg" alt="bg_home_sm" class="bannerImgSM">
             </div>
         
             <div class="plantform">
-                <h2 class="plantformTitle fz32 fw-bold">三大平台，我來搞定</h2>
+                <h2 class="plantformTitle fz32 lh46 fw-bold">三大平台，我來搞定</h2>
                 <ul class="plantformCard">
                     <li>
                         <img src="img/messenger.svg" alt="messenger_logo" class="plantformCardImg">
                         <h4 class="plantformCardTitle fz24 fw-bold">Facebook Messenger</h4>
-                        <p class="plantformCardContent fz16">結合粉絲專頁，提高粉絲互動率 有效經營品牌社群</p>
+                        <p class="plantformCardContent fz16 lh24">結合粉絲專頁，提高粉絲互動率 有效經營品牌社群</p>
                     </li>
                     <li>
                         <img src="img/line.svg" alt="line_logo" class="plantformCardImg">
                         <h4 class="plantformCardTitle fz24 fw-bold">LINE 官方帳號</h4>
-                        <p class="plantformCardContent ">融入日常生活，精準傳遞品牌資訊 打造個人化專屬服務</p>
+                        <p class="plantformCardContent fz16 lh24">融入日常生活，精準傳遞品牌資訊 打造個人化專屬服務</p>
                     </li>
                     <li>
                         <img src="img/instagram.svg" alt="instagram_logo" class="plantformCardImg">
                         <h4 class="plantformCardTitle fz24 fw-bold">Instagram 商業帳號</h4>
-                        <p class="plantformCardContent fz16">貼近粉絲，提升品牌自然聲量 行銷、抽獎一站完成</p>
+                        <p class="plantformCardContent fz16 lh24">貼近粉絲，提升品牌自然聲量 行銷、抽獎一站完成</p>
                     </li>
                 </ul>
             </div>
