--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
            
             <div class="proof">
-                <h2 class="fz32 lh46 fw-bold">好評如潮</h2>
+                <h2 class="proofTitle   fz32 lh46 fw-bold">好評如潮</h2>
                 <ul class="proofCard">
                     <li>
                         <img src="img/user01.jpg" alt="user01" class="proofCardImg">
@@ -139,7 +139,7 @@
                             <img src="img/icon_star.svg" alt="icon_star" class="proofCardStarImg">
                         </div>
                     </li>
-                    <li>
+                    <li class="disappearInMobio">
                         <img src="img/user02.jpg" alt="user02" class="proofCardImg">
                         <p class=" proofCardContent fz16 lh24">團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</p>
                         <hr>
@@ -174,12 +174,13 @@
 
     </div>
     <div class="CTA">
-        <img src="img/home_footer.svg" alt="footerBg" width="100%">
-        <h3 class="CTAWords fz32">\ 美好用戶體驗，從對話開始 /</h3>
+        <img src="img/home_footer.svg" alt="home_footer" class="CTABg">
+        <img src="img/footer_sm.svg" alt="footer_sm" class="CTABgSM">
+        <h3 class="CTAWords fz32 fw-bold">\ 美好用戶體驗，從對話開始 /</h3>
         <a href="price.html" class="btnG fz18 CTABtn">方案費用</a>
     </div>
     <footer>
-        <p class="footerContent fz24">© 2022 chatTalker. All Rights Reserved.</p>
+        <p class="footerContent fz16 lh24">© 2022 chatTalker. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
