index rwd finished withou backeground

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                     <p class="bannerContentContent fz20 lh29">Facebook、Instagram、LINE 聊天機器人解決方案</p>
                 </div>
                 <img src="img/home.svg" alt="banner" class="bannerImg">
-                <img src="img/bg_home_sm.svg" alt="bg_home_sm" class="bannerImgSM">
             </div>
         
             <div class="plantform">
@@ -81,7 +80,6 @@
                     </ul>
 
             </div>
-
             <div class="function">
                 <div class="functionCards">
                     <ul class="functionCard">
@@ -120,8 +118,7 @@
                     <p class="functionContentContent fz18 lh46">深入用戶日常，成為用戶貼身好友<br>精準傳遞品牌資訊，打造個人化專屬服務<br>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
                     <a href="price.html" class="functionContentBtn btnG">方案費用</a>
                 </div>
-            </div>
-           
+            </div>         
             <div class="proof">
                 <h2 class="proofTitle   fz32 lh46 fw-bold">好評如潮</h2>
                 <ul class="proofCard">
@@ -176,8 +173,10 @@
     <div class="CTA">
         <img src="img/home_footer.svg" alt="home_footer" class="CTABg">
         <img src="img/footer_sm.svg" alt="footer_sm" class="CTABgSM">
-        <h3 class="CTAWords fz32 fw-bold">\ 美好用戶體驗，從對話開始 /</h3>
-        <a href="price.html" class="btnG fz18 CTABtn">方案費用</a>
+        <div class="CTAContent">
+            <h3 class="CTAWords fz32 lh46 fw-bold">\ 美好用戶體驗，從對話開始 /</h3>
+            <a href="price.html" class="btnG fz18 CTABtn">方案費用</a>
+        </div>    
     </div>
     <footer>
         <p class="footerContent fz16 lh24">© 2022 chatTalker. All Rights Reserved.</p>
