index rwd finished withou backeground

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="background">
-        <img src="img/bg_home.svg" alt="background">
+        <img src="img/bg_home.svg" alt="background" class="backgroundTop">
     </div>
     <div class="toTopBtn fixedBtn" onclick="ToTop">TOP</div>
     <div class="container">
