price page update

--- a/price.html
+++ b/price.html
@@ -27,27 +27,70 @@
 
             </div>
 
-            <div class="plant">
-                <h2 class="plantTitle fz32 lh46">彈性選擇，提供您選擇最適合的方案</h2>
-                <ul class="plantBtns">
-                    <li><a href="" class="plantBtn btnW fz18 lh26">10000位</a></li>
-                    <li><a href="" class="plantBtn btnW fz18 lh26">15000位</a></li>
-                    <li><a href="" class="plantBtn btnW fz18 lh26">20000位</a></li>
-                    <li><a href="" class="plantBtn btnW fz18 lh26">25000位</a></li>
-                    <li><a href="" class="plantBtn btnW fz18 lh26">>25000位</a></li>
+            <div class="plan">
+                <h2 class="planTitle fz32 lh46">彈性選擇，提供您選擇最適合的方案</h2>
+                <ul class="planBtns">
+                    <li><a href="#" class="planBtn btnW fz18 lh26">10000位</a></li>
+                    <li><a href="#" class="planBtn btnW fz18 lh26">15000位</a></li>
+                    <li><a href="#" class="planBtn btnW fz18 lh26">20000位</a></li>
+                    <li><a href="#" class="planBtn btnW fz18 lh26">25000位</a></li>
+                    <li><a href="#" class="planBtn btnW fz18 lh26">>25000位</a></li>
                 </ul>
-                <div class="plantCards">
-                    <h2 class="plantCardTitle"></h2>
-                    <hr>
-                    <!-- 方塊還沒處理 -->
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                    <ul class="planCards">
+                        <li class="planCard">
+                            <h2 class="planCardTitle fz24 lh35">基本版</h2>
+                            <hr>
+                            <p class="planCardContent fz16 lh24">提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
+                                <div class="planCardPrice">
+                                    <div class="planCardPriceContent">
+                                        <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
+                                        <p class="planCardPriceContentNum fz32 lh35 fcG">10000
+                                        <sub class="fz12 lh17 fw-bold fcG">位</sub></p>
+                                    </div>
+                                        <p class="planCardPriceContentEqual fz29 lh42">=</p>
+                                    <div class="planCardPriceContent">
+                                        <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
+                                        <p class="planCardPriceContentNum fz32 lh35">10000
+                                        <sub class="fz12 lh17 fw-bold">TWD</sub></p>
+                                    </div>
+                                </div>
+                            <ul>
+                                <li class="planCardFunciontList fz16 lh24">支援 Messenger / Instagram 或 LINE 渠道</li>
+                                <li class="planCardFunciontList fz16 lh24">10 個進階套件</li>
+                                <li class="planCardFunciontList fz16 lh24">可設定 50 種分眾標籤</li>
+                                <li class="planCardFunciontList fz16 lh24">客服人機轉接</li>
+                            </ul>
+                            <a href="#" class="planCardBtn btnG fz18 lh26">立即體驗</a>
+                        </li>
+
+                        <li class="planCard">
+                            <h2 class="planCardTitle fz24 lh35">標準版</h2>
+                            <hr>
+                            <p class="planCardContent fz16 lh24">建立企業流量池，全通路數據整合與交換<br>高可靠性服務</p>
+                                <div class="planCardPrice">
+                                    <div class="planCardPriceContent">
+                                        <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
+                                        <p class="planCardPriceContentNum fz32 lh35 fcG">10000
+                                        <sub class="fz12 lh17 fw-bold fcG">位</sub></p>
+                                    </div>
+                                    <p class="planCardPriceContentEqual fz29 lh42">=</p>
+                                    <div class="planCardPriceContent">
+                                        <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
+                                        <p class="planCardPriceContentNum fz32 lh35">1600
+                                        <sub class="fz12 lh17 fw-bold">TWD</sub></p>
+                                    </div>
+                                </div>
+                            <ul>
+                                <li class="planCardFunciontList fz16 lh24">支援 Messenger / Instagram 或 LINE 渠道</li>
+                                <li class="planCardFunciontList fz16 lh24">20 個進階套件</li>
+                                <li class="planCardFunciontList fz16 lh24">可設定 500 種分眾標籤</li>
+                                <li class="planCardFunciontList fz16 lh24">客服人機轉接＋自動指派專員處理</li>
+                            </ul>
+                            <a href="#" class="planCardBtn btnG fz18 lh26">立即體驗</a>
+                        </li>
                     </ul>
                 </div>
-            </div>
+            
 
         </main> 
         </div>
