price page  QA finshed

--- a/price.html
+++ b/price.html
@@ -91,6 +91,23 @@
                     </ul>
                 </div>
             
+                <div class="QA">
+                    <h2 class="QATitle fz32 lh46 fw-bold">常見問題</h2>
+                    <ul class="QAList">
+                        <li>
+                            <h3 class="QAListTitle QAListTitleClose fz18 lh28">我要怎麼變更方案？</h3>
+                            <p class="QAListContentClose fz18 lh28"></p>
+                        </li>
+                        <li>
+                            <h3 class="QAListTitle QAListTitleClose fz18 lh28">如果我沒有LINE官方帳號怎麼辦？</h3>
+                            <p class="QAListContentClose fz18 lh28"></p>
+                        </li>
+                        <li>
+                            <h3 class="QAListTitle QAListTitleOpen fz18 lh28 fcG fw-bold">非上班日有客服支援嗎？</h3>
+                            <p class="QAListContentOpen fz18 lh28">當然哦！我們錢都收了，不會拋棄你的！<br>請您直接來我們公司，我們假日也都在辦公室。</p>
+                        </li>
+                    </ul>
+                </div>
 
         </main> 
         </div>
