--- a/price.html
+++ b/price.html
@@ -8,11 +8,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
-    <title>ChatTalker</title>
+    <title>ChatTalker-Pricing</title>
 </head>
 <body>
     <div class="toTopBtn fixedBtn" onclick="ToTop">TOP</div>
     <img src="img/banner.svg" alt="priceBanner" class="priceBannerImg">
+    <div class="backgroundPriceBanner"></div>
     <div class="container">
         <header>
             <h1><a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a></h1>
