price banner mb  finshed

--- a/price.html
+++ b/price.html
@@ -22,6 +22,7 @@
             </div>
         </header>
         <main>
+            <img src="img/banner_sm.svg" alt="priceBanner" class="priceBannerImgMobile">
             <div class="priceBanner">
                 <h2 class="priceBannerTitle fz48 lh70">計費方式說明</h2>
                 <p class="priceBannerContent fz16 lh24">聊天機器人幫你實現增粉、轉單、客服等目標</p>
@@ -51,7 +52,7 @@
                                         <p class="planCardPriceContentEqual fz29 lh42">=</p>
                                     <div class="planCardPriceContent">
                                         <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
-                                        <p class="planCardPriceContentNum fz32 lh35">10000
+                                        <p class="planCardPriceContentNum fz32 lh35">600
                                         <sub class="fz12 lh17 fw-bold">TWD</sub></p>
                                     </div>
                                 </div>
@@ -77,7 +78,7 @@
                                     <p class="planCardPriceContentEqual fz29 lh42">=</p>
                                     <div class="planCardPriceContent">
                                         <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
-                                        <p class="planCardPriceContentNum fz32 lh35">1600
+                                        <p class="planCardPriceContentNum fz32 lh35">1,600
                                         <sub class="fz12 lh17 fw-bold">TWD</sub></p>
                                     </div>
                                 </div>
