--- a/price.html
+++ b/price.html
@@ -23,13 +23,13 @@
         </header>
         <main>
             <img src="img/banner_sm.svg" alt="priceBanner" class="priceBannerImgMobile">
-            <div class="priceBanner">
+            <section class="priceBanner">
                 <h2 class="priceBannerTitle fz48 lh70">計費方式說明</h2>
                 <p class="priceBannerContent fz16 lh24">聊天機器人幫你實現增粉、轉單、客服等目標</p>
 
-            </div>
+            </section>
 
-            <div class="plan">
+            <section class="plan">
                 <h2 class="planTitle fz32 lh46">彈性選擇，提供您選擇最適合的方案</h2>
                 <ul class="planBtns">
                     <li><a href="#" class="planBtn btnW fz18 lh26">10000位</a></li>
@@ -91,9 +91,9 @@
                             <a href="#" class="planCardBtn btnG fz18 lh26">立即體驗</a>
                         </li>
                     </ul>
-                </div>
+            </section>
             
-                <div class="QA">
+                <section class="QA">
                     <h2 class="QATitle fz32 lh46 fw-bold">常見問題</h2>
                     <ul class="QAList">
                         <li>
@@ -109,7 +109,7 @@
                             <p class="QAListContentOpen fz18 lh28">當然哦！我們錢都收了，不會拋棄你的！<br>請您直接來我們公司，我們假日也都在辦公室。</p>
                         </li>
                     </ul>
-                </div>
+                </section>
 
         </main> 
         </div>
