adjust follow advice

--- a/price.html
+++ b/price.html
@@ -11,15 +11,13 @@
     <title>ChatTalker-Pricing</title>
 </head>
 <body>
-    <div class="toTopBtn fixedBtn" onclick="ToTop">TOP</div>
+    <a class="toTopBtn fixedBtn" onclick="ToTop">TOP</a>
     <img src="img/banner.svg" alt="priceBanner" class="priceBannerImg">
     <div class="backgroundPriceBanner"></div>
     <div class="container">
         <header>
             <h1><a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a></h1>
-            <div class="headerBtn">
             <a href="price.html" class="btnR fz16">方案費用</a>
-            </div>
         </header>
         <main>
             <img src="img/banner_sm.svg" alt="priceBanner" class="priceBannerImgMobile">
