--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <title>ChatTalker</title>
 </head>
 <body>
-    <div class="toTopBtn fixedBtn" onclick="ToTop">TOP</div>
+    <a class="toTopBtn fixedBtn" onclick="ToTop">TOP</a>
     <img src="img/bg_home.svg" alt="background" class="backgroundTop">
     <div class="container">
         <header>
             <h1><a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a></h1>
-            <div class="headerBtn">
             <a href="price.html" class="btnR fz16">方案費用</a>
-            </div>
         </header>
         <main>
             <section class="banner">
@@ -53,7 +51,7 @@
             </section>    
        
             <section class="cusmers">
-                <h4 class="cusmersTitle fz32 fw-bold">任何的角色，我都能給</h4>
+                <h2 class="cusmersTitle fz32 fw-bold">任何的角色，我都能給</h2>
                 <p class="cusmersContent fz20">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
                     <ul class="cusmersCard">
                         <li>
