--- a/price.html
+++ b/price.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
+    <script src="js\main.js"></script>
     <title>ChatTalker-Pricing</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
             <section class="plan">
                 <h2 class="planTitle fz32 lh46">彈性選擇，提供您選擇最適合的方案</h2>
                 <ul class="planBtns">
-                    <li><a href="#" class="planBtn btnW fz18 lh26">10000位</a></li>
+                    <li><a href="#" onclick="changePlanContent()" class="planBtn btnW fz18 lh26">10000位</a></li>
                     <li><a href="#" class="planBtn btnW fz18 lh26">15000位</a></li>
                     <li><a href="#" class="planBtn btnW fz18 lh26">20000位</a></li>
                     <li><a href="#" class="planBtn btnW fz18 lh26">25000位</a></li>
@@ -43,8 +44,8 @@
                             <p class="planCardContent fz16 lh24">提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
                                 <div class="planCardPrice">
                                     <div class="planCardPriceContent">
-                                        <p class="planCardPriceContentTitle fz12 lh17">訂閱用戶數</p>
-                                        <p class="planCardPriceContentNum fz32 lh35 fcG">10000
+                                        <p class="planCardPriceContentTitle fz12 lh17" >訂閱用戶數</p>
+                                        <p class="planCardPriceContentNum fz32 lh35 fcG" id="test">10000
                                         <sub class="fz12 lh17 fw-bold fcG">位</sub></p>
                                     </div>
                                         <p class="planCardPriceContentEqual fz29 lh42">=</p>
